Redirect subprocess output to Log4j